[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities", "development-tools", "text-processing", "value-formatting"]
description = "A tool for doing record analysis and transformation"
documentation = "https://github.com/dflemstr/rq/blob/master/README.md"
homepage = "https://github.com/dflemstr/rq"
keywords = ["command-line-tool", "cli", "javascript", "record", "query"]
license = "Apache-2.0"
name = "record-query"
readme = "README.md"
repository = "https://github.com/dflemstr/rq"
version = "1.0.4"
edition = "2018"

[badges]

[badges.travis-ci]
branch = "master"
repository = "dflemstr/rq"

[build-dependencies]
built = "0.5.2"
env_logger = "0.9.3"
regex = "1.10.6"
vergen = "7.5.1"

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.14"
csv = "1.3.0"
directories = "4.0.1"
dtoa = "1.0.9"
env_logger = "0.7.1"
failure = "0.1.8"
glob = "0.3.1"
itoa = "0.4.8"
log = "0.4.22"
nix = "0.24.3"
ordered-float = "3.9.2"
pest = "2.7.12"
protobuf = "2.28.0"
rmp = "0.8.14"
rmpv = "1.3.0"
serde = "1.0.210"
serde-hjson = "0.9.1"
serde-protobuf = "0.8.2"
serde_cbor = "0.11.2"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
structopt = "0.3.26"
yaml-rust = "0.4.5"

[dependencies.avro-rs]
version = "0.6.6"
features = ["snappy"]

[dependencies.toml]
version = "0.6.0"
features = ["preserve_order"]

[profile.release]
lto = true
codegen-units = 1
